2020-03-13 David Anderson
    * RegressionTestsResults.ods: New. Keeping track
      of regression test timings. 
2020-03-13 David Anderson
    *  dwarfdump-s390.O: IBM 390 baseline executable.
2020-03-13 David Anderson
    * CLEANUP: Added a remove of vglog, something created
      by a special test script.
    * DWARFTEST.sh: Now allows for optional suppress-dealloc-tree
      testing.
    * baddie1/linetaberr.base: New baseline as
      we now emit the major error count (if > 0)
      at the end of each dwarfdump run.
    * dwarfdump-i386-freebsd.O,dwarfdump-i386-ubuntu.O,
      dwarfdump-x86_64-freebsd.O,dwarfdump-x86_64-ubuntu.O,:
      New baseline executables. New baseline as
      we now emit the major error count (if > 0)
      at the end of each dwarfdump run.  And
      there has been improvements in some error messages
      and in leak prevention.

2020-02-18 David Anderson
    * DWARFTEST.sh:  Now allows a shorter test (not one that
      should be routinely used, but handy once in a while)
    * dwarfdump-i386-ubuntu.O,dwarfdump-x86_64-freebsd.O,
      dwarfdump-x86_64-ubuntu.O: New baselines with improved
      reporting of dwarf5 line table headers.
2020-02-16 David Anderson
    * DWARFTEST.sh: Added one-time messags about timing.
      Revised the check for timeing functionality so all
      tests here of that are consistently expressed
      (The inconsistent one was wrong).
    * RUNTIMEFILES: It has been failing to do what it should
      (so we record user and system time of the tests)
      for some time, but now is fixed and we emit a one-time
      message saying how the check here went..
    * python2/showpct.py,python3/showpct.py: These now get
      a sensible percent-done and are more easily maintainable.
2020-02-16 David Anderson
    * DWARFTEST.sh: Ensuring the libelf-reading code is tested now
      by adding -oi option to nearly all test sets. Now the
      overall test-run count is about 51000.