@@ -1,3 +1,9 @@
+2020-03-18 David Anderson
+    * DWARFTEST.sh: Now allows for optional suppress-dealloc-tree
+      via "export SUPPRESSTREE=y"
+      And did some cleanup of echo statements for a better
+      appearance.
+    * RUNTIMEFILES: Clean up echo stmts for a better appearance. 
 2020-03-13 David Anderson
     * RegressionTestsResults.ods: New. Keeping track
       of regression test timings. 
